# adminbot

./: CMakeLists.txt
api/: discordapi.hpp
api/src/: discordapi.cpp
parser/: commandparser.hpp  macroparser.hpp
parser/src/: macroparser.cpp
